@@ -1,5 +1,14 @@
 2008-06-20  Dan Williams  <dcbw@redhat.com>
 
+	Update for VPN UI plugin API changes
+
+	* src/connection-editor/page-vpn.c
+		- (ce_page_vpn_new): connect to 'changed' instead of 'validity-changed'
+		- (validate): nm_vpn_plugin_ui_widget_interface_update_connection()
+			now returns validity
+
+2008-06-20  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/nm-connection-list.c
 		- (create_new_connection_for_type): fix adding CDMA connections
 
